syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "Common/Protos/decimal.proto";

option csharp_namespace = "AppDomain.Invoices.Grpc.Models";

package app_domain.invoices;

message Invoice {
    string tenant_id = 1;
    string invoice_id = 2;
    string name = 3;
    string status = 4;
    DecimalValue amount = 5;
    string currency = 6;
    optional google.protobuf.Timestamp due_date = 7;
    google.protobuf.StringValue cashier_id = 8;
    google.protobuf.Timestamp created_date_utc = 9;
    google.protobuf.Timestamp updated_date_utc = 10;
    int32 version = 11;
}
